# auto-version

./: Cargo.toml  LICENSE  README.md
src/: lib.rs
tests/: test_lib.rs
