[package]
name = "auto-version"
version = "0.1.0"
authors = ["Ed <barp.edoardo@gmail.com>"]
edition = "2018"
license = "MIT OR Apache-2.0"
description = "Painless and production friendly timers"

[lib]
proc-macro = true

[dependencies]
quote = "1.0.9"
syn = { version = "1.0.73", features = ["full"] }