[package]
name = "auto-version"
version = "0.1.0"
authors = ["Ed <barp.edoardo@gmail.com>"]
edition = "2018"
license = "MIT OR Apache-2.0"
description = "Automatically add -v and --version output to your rust executables"
repository = "https://github.com/dominusmi/auto-version"
keywords = ["version", "macro", "devops", "automatic", "command-line"]
categories = ["command-line-utilities", "config"]
[lib]
proc-macro = true

[dependencies]
quote = "1.0.9"
syn = { version = "1.0.73", features = ["full"] }